Fixed mobile scroll issue. Had to utilize z-indexes and add a set height to the UL element on mobile sizes to fix this. It would be ideal, however, when scrolling down through the menu if the close button stays in view!

--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,8 @@ h2 {
         display: inline;
         vertical-align: middle;
         margin-left: 25%;
+        position: relative;
+        z-index: 2;
     }
     #home-icon {
         color: rgb(21, 73, 99);
@@ -381,6 +383,9 @@ h2 {
         bottom: 60px;
         left: 15%;
         margin-bottom: -52px;
+        z-index: 1;
+        max-height: 320px;
+        overflow-y: auto;
         /*Used to be -25px, now it's -50px */
         /*margin-bottom Used to be -10px */
     }
